updated source code in june 30th

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,54 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p This is a simple web application using Jade template engine.
+  p You can customize this template to fit your needs.
+  p For more information, visit the
+  a(href="https://jade-lang.com/") Jade documentation
+  p This template is rendered using the Jade engine.
+  p You can add more content here as needed.    
+  p This is a simple web application using Jade template engine.
+  p You can customize this template to fit your needs.
+  p For more information, visit the
+  a(href="https://jade-lang.com/") Jade documentation
+  p This template is rendered using the Jade engine.
+  p You can add more content here as needed.
+  p This is a simple web application using Jade template engine.
+  p You can customize this template to fit your needs.
+  p For more information, visit the
+  a(href="https://jade-lang.com/") Jade documentation
+  p This template is rendered using the Jade engine.
+  p You can add more content here as needed.
+  p This is a simple web application using Jade template engine.
+
+  p You can customize this template to fit your needs.
+  p For more information, visit the
+  a(href="https://jade-lang.com/") Jade documentation
+  p This template is rendered using the Jade engine.
+  p You can add more content here as needed.
+  p This is a simple web application using Jade template engine.
+  p You can customize this template to fit your needs.
+  p For more information, visit the
+  a(href="https://jade-lang.com/") Jade documentation
+  p This template is rendered using the Jade engine.
+  p You can add more content here as needed.
+
+  p This is a simple web application using Jade template engine.
+  p You can customize this template to fit your needs.
+  p For more information, visit the
+  a(href="https://jade-lang.com/") Jade documentation
+  p This template is rendered using the Jade engine.
+  p You can add more content here as needed.
+  p This is a simple web application using Jade template engine.
+  p You can customize this template to fit your needs.
+  p For more information, visit the
+  a(href="https://jade-lang.com/") Jade documentation
+  p This template is rendered using the Jade engine.
+  p You can add more content here as needed.
+  p This is a simple web application using Jade template engine.
+  p You can customize this template to fit your needs.  
+  p For more information, visit the
+  a(href="https://jade-lang.com/") Jade documentation
+  p This template is rendered using the Jade engine.
+  p You can add more content here as needed.
+  p This is a simple web application using Jade template engine.    
